Make sure home and download pages look good on smaller screens (#108)

--- a/app/assets/css/modules/_page.styl
+++ b/app/assets/css/modules/_page.styl
@@ -39,7 +39,7 @@
     h1:hover > a, h2:hover > a, h3:hover > a, h4:hover > a, h5:hover > a
         visibility: visible
         color: inherit
-        text-decoration: none        
+        text-decoration: none
 
 article, aside
     @extend .typo
@@ -106,8 +106,6 @@ article, aside
     #content
         padding: 0
         padding-top 10px
-        // background: image("support/line.png") left top repeat-x
-        // retina("support/line.png", 100% 80px)
         background-size: 100% 80px
 
         section
@@ -132,8 +130,6 @@ article, aside
                 text: big
 
         @media only screen and (max-width: 960px)
-            background: image("support/line.png") left top repeat-x
-            background-size: 100% 80px
             section
                 width: 100%
                 float: none
